<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layoutDirection="rtl"
                tools:context=".activities.login.LoginActivity">

    <View
            android:id="@+id/vHeader"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/colorBlack" />

    <ImageView
            android:id="@+id/ivBackground"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/vHeader"
            android:scaleType="fitXY"
            android:src="@drawable/bg_splash_invert" />

    <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_icon" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivIcon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:text="@string/app_name_persian"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ivBackground"
            android:background="@color/colorWhite">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="55dp"
                android:layout_marginEnd="55dp"
                android:orientation="vertical">

            <com.rayanandisheh.peysepar.passenger.customes.mEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_input_layout"
                    android:drawableEnd="@drawable/ic_vpn_key_black"
                    android:gravity="center"
                    android:hint="@string/newPassword"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/colorTextDark"
                    android:textColorHint="@color/colorText"
                    android:textDirection="ltr"
                    android:textSize="14sp" />

            <com.rayanandisheh.peysepar.passenger.customes.mEditText
                    android:id="@+id/etRepeatPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_input_layout"
                    android:drawableEnd="@drawable/ic_vpn_key_black"
                    android:gravity="center"
                    android:hint="@string/newRepassword"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/colorTextDark"
                    android:textColorHint="@color/colorText"
                    android:textDirection="ltr"
                    android:textSize="14sp" />

            <Button
                    android:id="@+id/btSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_button"
                    android:text="@string/login"
                    android:textColor="@color/colorTextLight"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            <ProgressBar
                    android:id="@+id/pbSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_button"
                    android:indeterminateTint="@color/colorTextLight"
                    android:visibility="gone" />

        </LinearLayout>

        <TextView
                android:id="@+id/tvForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/tvRegister"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:text="@string/forgotPass"
                android:textColor="@color/colorText"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/tvForgotPassLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/tvRegister"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                android:visibility="gone" />

        <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:text="@string/notRegister"
                android:textColor="@color/colorTextDark"
                android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>