<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:layoutDirection="rtl"
                tools:context=".activities.feedback.FeedbackActivity">

    <ImageView
            android:id="@+id/ivBackground"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/vHeader"
            android:scaleType="fitXY"
            android:src="@drawable/bg_splash_invert"/>

    <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_icon"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivIcon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:text="@string/app_name_persian"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ivBackground"
            android:layout_marginTop="20dp">

        <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:numStars="5"
                android:rating="4"/>

        <TextView
                android:id="@+id/tvRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ratingBar"
                android:layout_centerHorizontal="true"
                android:text="@string/rateToApp"/>

        <EditText
                android:id="@+id/etFeedback"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_below="@id/tvRatingBar"
                android:layout_marginStart="30dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/bg_input_layout"
                android:hint="@string/writeFeedback"
                android:inputType="textMultiLine"
                android:minLines="5"
                android:padding="5dp"/>

        <RelativeLayout
                android:id="@+id/rlButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:layout_alignParentStart="true">
            <Button
                    android:id="@+id/btFeedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/bg_button"
                    android:foreground="?selectableItemBackground"
                    android:text="@string/submit"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            <ProgressBar
                    android:id="@+id/pbFeedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"
                    android:indeterminateTint="#fff"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/bg_button"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>