<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".activities.login.LoginActivity">

    <View
        android:id="@+id/vHeader"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorPrimary" />

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/vHeader"
        android:scaleType="fitXY"
        android:src="@drawable/bg_splash_invert" />

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/app_name_persian"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivIcon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="0.10.0"
            android:id="@+id/txtVersionLogin"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"/>








    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ivBackground"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llLogin"
            android:layout_marginTop="55dp"
            android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/llLogin">

                <LinearLayout android:layout_width="20dp"
                              android:layout_marginStart="30dp"
                              android:layout_marginTop="5dp"
                              android:layout_height="20dp">
                    <ImageView
                            android:layout_width="match_parent"
                            android:id="@+id/ivWarningMobileLogin"
                            android:src="@drawable/ic_warning"
                            android:visibility="gone"
                            android:layout_alignParentLeft="true"
                            android:layout_height="match_parent"
                            android:layout_alignParentTop="true"/>
                </LinearLayout>
                <LinearLayout android:layout_width="wrap_content"
                              android:layout_height="wrap_content">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="موبایل"
                            android:textColor="@color/colorsecondarytext"
                            android:textSize="15sp"
                            android:layout_marginStart="5dp"
                            android:textStyle="bold"/>
                </LinearLayout>

            </LinearLayout>



            <EditText
                android:id="@+id/etMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input_layout"
                android:drawableEnd="@drawable/ic_phone_android_black"
                android:gravity="center"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="55dp"
                android:hint="@string/mobileNumber"
                android:inputType="phone"
                android:padding="10dp"
                android:maxLength="11"
                android:paddingBottom="5dp"
                android:textColor="@color/colorTextDark"
                android:textColorHint="@color/colorText"
                android:textDirection="ltr"
                android:textSize="14sp" />
















            <RelativeLayout
                    android:id="@+id/rlButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_alignParentStart="true">
                <Button
                        android:id="@+id/btLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="55dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="55dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/bg_button"
                        android:foreground="?selectableItemBackground"
                        android:text="ورود"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                <ProgressBar
                        android:id="@+id/pbLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="55dp"
                        android:layout_marginTop="5dp"
                        android:visibility="gone"
                        android:indeterminateTint="#fff"
                        android:layout_marginEnd="55dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/bg_button"/>

            </RelativeLayout>







            <!--<Button-->
                <!--android:id="@+id/btLogin"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="20dp"-->
                <!--android:background="@drawable/bg_button"-->
                <!--android:text="@string/login"-->
                <!--android:layout_marginEnd="55dp"-->
                <!--android:layout_marginStart="55dp"-->
                <!--android:textColor="@color/colorTextLight"-->
                <!--android:textSize="16sp"-->
                <!--android:textStyle="bold" />-->

            <!--<ProgressBar-->
                <!--android:id="@+id/pbLogin"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="20dp"-->
                <!--android:layout_marginEnd="55dp"-->
                <!--android:layout_marginStart="55dp"-->
                <!--android:background="@drawable/bg_button"-->
                <!--android:indeterminateTint="@color/colorTextLight"-->
                <!--android:visibility="visible" />-->

        </LinearLayout>


        <TextView
            android:id="@+id/tvForgotPassLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tvRegister"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/notRegister"
            android:textColor="@color/colorTextDark"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>